feat: list all newsletters
