# api/rest/v1/interface.go
@@ -22,6 +22,7 @@ type NewsletterService interface {
 	Create(ctx context.Context, createNewsletterInput domnewsletter.CreateNewsletterInput) (*domnewsletter.Newsletter, error)
 	Read(ctx context.Context, NewsletterID id.Newsletter) (*domnewsletter.Newsletter, error)
 	ListCurrentAuthorNewsletters(ctx context.Context, authorID id.Author) ([]domnewsletter.Newsletter, error)
+	List(ctx context.Context) ([]domnewsletter.Newsletter, error)
 }
 
 // SessionService is an interface for v1 session endpoints.
